coog: add missing translations for version  2.4 (#2705)

--- a/modules/account_invoice_slip/locale/fr.po
+++ b/modules/account_invoice_slip/locale/fr.po
@@ -11,14 +11,37 @@ msgid "All fields must be set before proceeding"
 msgstr "Tous les champs doivent être saisis avant de poursuivre"
 
 msgctxt "error:account.invoice.slip.configuration:"
-msgid ""
-"More than one draft slip with domain %s"
-msgstr ""
-"Il y a plus d'un bordereau brouillon correspondant au domaine %s"
+msgid "More than one draft slip with domain %s"
+msgstr "Il y a plus d'un bordereau brouillon correspondant au domaine %s"
 
 msgctxt "error:account.invoice:"
 msgid "Principal line reset following unreconciliation of invoice %s"
 msgstr "Ligne de bordereau suite à la dé-réconciliation de la quittance %s"
+
+msgctxt "error:insurer:"
+msgid "Notice kind does not match insurer configuration"
+msgstr ""
+"Le type de bordereau ne correspond pas à la configuration de l'assureur"
+
+msgctxt "error:insurer:"
+msgid ""
+"You cannot generate invoices simultaneously for insurers whose group invoice"
+" configuration is different"
+msgstr ""
+"Vous ne pouvez pas générer simultanément les bordereaux d'assureurs ayant "
+"une configuration différente de regroupement des bordereaux"
+
+msgctxt "field:account.insurer_invoice.create_empty,id:"
+msgid "ID"
+msgstr "Identifiant"
+
+msgctxt "field:account.insurer_invoice.finalize,id:"
+msgid "ID"
+msgstr "Identifiant"
+
+msgctxt "field:account.insurer_invoice.link,id:"
+msgid "ID"
+msgstr "Identifiant"
 
 msgctxt "field:account.invoice,is_slip:"
 msgid "Is Slip"
@@ -192,6 +215,10 @@ msgctxt "field:account.move.line,principal_invoice_line:"
 msgid "Principal Invoice Line"
 msgstr "Ligne de facturation"
 
+msgctxt "field:insurer,group_insurer_invoices:"
+msgid "Group Insurer Invoices"
+msgstr "Regrouper les bordereaux"
+
 msgctxt "help:account.invoice.slip.configuration,name:"
 msgid ""
 "The value of this field will be used as the description of the generated "
@@ -200,9 +227,29 @@ msgstr ""
 "La valeur de ce champ sera utilisée comme description pour le bordereau "
 "généré"
 
-msgctxt "model:account.invoice.create.insurer_slip,name:"
+msgctxt "help:insurer,group_insurer_invoices:"
+msgid ""
+"If True, all insurer related invoices (premiums / claims / etc) will be "
+"grouped in one"
+msgstr ""
+"Si coché, tous les bordereaux (primes, prestations, etc) seront regroupés en"
+" un seul"
+
+msgctxt "model:account.insurer_invoice.create_empty,name:"
+msgid "Insurer Empty Invoice Principal Creation Batch"
+msgstr "Batch de création du bordereau assureur vide"
+
+msgctxt "model:account.insurer_invoice.finalize,name:"
+msgid "Insurer Invoice Principal Finalize Batch"
+msgstr "Batch de finalisation du bordereau assureur"
+
+msgctxt "model:account.insurer_invoice.link,name:"
+msgid "Insurer Invoice Principal Link Batch"
+msgstr "Batch de liaison du bordereau assureur"
+
+msgctxt "model:account.invoice.create.insurer_slip.ask,name:"
 msgid "Create Insurer Slip Parameters"
-msgstr "Paramètres du bordereau"
+msgstr "Paramètres de création du bordereau assureur"
 
 msgctxt "model:account.invoice.slip.account,name:"
 msgid "Invoice Slip Account Relation"
