--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -49,11 +49,11 @@ msgstr ""
 
 msgctxt "error:contract.option:"
 msgid ""
-"The computed end date for option %(option)s is less than its start date, "
-"it will be automatically declined"
+"The computed end date for option %(option)s is less than its start date, it "
+"will be automatically declined"
 msgstr ""
-"La garantie %(option)s a une date de fin antérieure à sa date de début, elle "
-"sera automatiquement déclinée"
+"La garantie %(option)s a une date de fin antérieure à sa date de début, elle"
+" sera automatiquement déclinée"
 
 msgctxt "error:contract.option:"
 msgid "There are overlapping coverages for %(parent)s"
@@ -1270,6 +1270,10 @@ msgctxt "field:offered.product,quote_number_sequence:"
 msgid "Quote number sequence"
 msgstr "Séquence de numéro de devis"
 
+msgctxt "field:offered.product,quote_number_sequences:"
+msgid "Sequences"
+msgstr "Séquences"
+
 msgctxt "field:offered.product.quote_number_sequence,company:"
 msgid "Company"
 msgstr "Société"
@@ -1313,6 +1317,10 @@ msgstr "Modifié par"
 msgctxt "field:offered.product.quote_number_sequence,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
+
+msgctxt "field:party.anonymize.identify,id:"
+msgid "ID"
+msgstr "Identifiant"
 
 msgctxt "field:party.party,contracts:"
 msgid "Contracts"
@@ -1728,6 +1736,10 @@ msgstr "Configuration par défaut des numéros de séquence de devis"
 msgctxt "model:offered.product.quote_number_sequence,name:"
 msgid "Product Quote Number Sequence"
 msgstr "Numéro de séquence du produit en devis"
+
+msgctxt "model:party.anonymize.identify,name:"
+msgid "Identify Parties to Anonymize batch"
+msgstr "Batch d'identification des tiers à anonymiser"
 
 msgctxt "model:party.synthesis.menu.contract,name:"
 msgid "Party Synthesis Menu Contract"
