--- a/modules/contract_insurance_health_fr/locale/fr.po
+++ b/modules/contract_insurance_health_fr/locale/fr.po
@@ -32,18 +32,6 @@ msgctxt "error:party.relation:"
 msgid "The SSN is required for %s"
 msgstr "Le numéro NIR est requis pour %s"
 
-msgctxt "field:offered.product,print_madelin_reports:"
-msgid "Print Madelin Reports"
-msgstr "Imprimer les modèles Madelin"
-
-msgctxt "help:offered.product,print_madelin_reports:"
-msgid ""
-"If set, the batch will retrieve associated contracts each "
-"new civil year for the Madelin reports generation"
-msgstr ""
-"Si coché, le batch récuperera les contrats associés à chaque nouvelle "
-"année civile pour la génération des modèles Madelin"
-
 msgctxt "field:health.care_system,code:"
 msgid "Code"
 msgstr "Code"
@@ -156,6 +144,14 @@ msgctxt "field:health.party_complement,insurance_fund_number:"
 msgid "Health Care System Number"
 msgstr "Numéro d'organisme d'affiliation"
 
+msgctxt "field:madelin.law.report,id:"
+msgid "ID"
+msgstr "Identifiant"
+
+msgctxt "field:offered.product,print_madelin_reports:"
+msgid "Print Madelin Reports"
+msgstr "Imprimer les modèles Madelin"
+
 msgctxt "field:party.party,func_key:"
 msgid "Functional Key"
 msgstr "Clé fonctionnelle"
@@ -175,6 +171,14 @@ msgstr "Ayant droit"
 msgctxt "field:party.party,social_security_insured:"
 msgid "Social Security Insured"
 msgstr "Assuré social"
+
+msgctxt "help:offered.product,print_madelin_reports:"
+msgid ""
+"If set, the batch will retrieve associated contracts each new civil year for"
+" the Madelin reports generation"
+msgstr ""
+"Si coché, le batch récuperera les contrats associés à chaque nouvelle année "
+"civile pour la génération des modèles Madelin"
 
 msgctxt "model:health.care_system,name:"
 msgid "Health Care System"
@@ -207,6 +211,10 @@ msgstr "Régimes"
 msgctxt "model:ir.ui.menu,name:menu_insurance_fund_form"
 msgid "Insurance Funds"
 msgstr "Caisses d'Affiliation"
+
+msgctxt "model:madelin.law.report,name:"
+msgid "Madelin Law Report Batch"
+msgstr "Batch de rapport loi Madelin"
 
 msgctxt ""
 "model:party.relation.type,name:social_security_dependent_relation_type"
