--- a/modules/report_engine/locale/fr.po
+++ b/modules/report_engine/locale/fr.po
@@ -39,8 +39,28 @@ msgid "Report is impossible: No contact available."
 msgstr "La génération du courrier est impossible: pas de contact disponible"
 
 msgctxt "error:report.template.parameter:"
+msgid "Invalid domain in schema \"%(schema)s\"."
+msgstr "Domaine non valide dans le schéma « %(schema)s »."
+
+msgctxt "error:report.template.parameter:"
 msgid "The code must be unique"
 msgstr "Le code doit être unique"
+
+msgctxt "error:report.template.parameter:"
+msgid ""
+"The following keys will be removed from all existing data in the database, this may take some time:\n"
+"%(codes)s"
+msgstr ""
+"Toutes les occurences des clefs suivantes seront retirées de la base de "
+"données, cela peut prendre du temps:\n%(codes)s"
+
+msgctxt "error:report.template.parameter:"
+msgid ""
+"The following keys will be renamed in all existing data in the database, this may take some time:\n"
+"%(codes)s"
+msgstr ""
+"Toutes les occurences des clefs suivantes seront renommées en base de "
+"données, cela peut prendre du temps:\n%(codes)s"
 
 msgctxt "error:report.template:"
 msgid "Flat Document"
@@ -270,6 +290,10 @@ msgctxt "field:report.create.select_template,template:"
 msgid "Template"
 msgstr "Modèle"
 
+msgctxt "field:report.generate.period,id:"
+msgid "ID"
+msgstr "Identifiant"
+
 msgctxt "field:report.template,code:"
 msgid "Code"
 msgstr "Code"
@@ -493,6 +517,10 @@ msgstr "Créé par"
 msgctxt "field:report.template.parameter,digits:"
 msgid "Digits"
 msgstr "Précision"
+
+msgctxt "field:report.template.parameter,domain:"
+msgid "Domain"
+msgstr "Domaine"
 
 msgctxt "field:report.template.parameter,id:"
 msgid "ID"
@@ -845,6 +873,10 @@ msgstr "Prévisualisation du rapport"
 msgctxt "model:report.create.select_template,name:"
 msgid "Report Creation Select Template"
 msgstr "Sélection du modèle"
+
+msgctxt "model:report.generate.period,name:"
+msgid "Generate Letter Period"
+msgstr "Générer le rapport annuel"
 
 msgctxt "model:report.template,name:"
 msgid "Report Template"
