--- a/modules/event_log/locale/fr.po
+++ b/modules/event_log/locale/fr.po
@@ -10,10 +10,6 @@ msgctxt "error:event.type.action:"
 msgid "Use Event Aggregate Configuration"
 msgstr "Utiliser la configuration d'agrégation d'événement"
 
-msgctxt "field:event.aggregate.description,configuration:"
-msgid "Configuration"
-msgstr "Configuration"
-
 msgctxt "field:event.aggregate.description,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
@@ -38,6 +34,10 @@ msgctxt "field:event.aggregate.description,event_type_notify:"
 msgid "Event Type To Notify"
 msgstr "Evénement à notifier"
 
+msgctxt "field:event.aggregate.description,func_key:"
+msgid "Functionnal Key"
+msgstr "Clé fonctionnelle"
+
 msgctxt "field:event.aggregate.description,id:"
 msgid "ID"
 msgstr "Identifiant"
@@ -61,38 +61,6 @@ msgstr "Modifié par"
 msgctxt "field:event.aggregate.description,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
-
-msgctxt "help:event.aggregate.description,event_type_aggregate:"
-msgid "Event Type to aggregate for [duration] [unit]"
-msgstr "Type d'événement à agréger sur une période de [durée][unité]"
-
-msgctxt "model:event.aggregate.description,name:"
-msgid "Event Aggregate Description"
-msgstr "Description d'événement agrégé"
-
-msgctxt "model:event.type,name:event_aggregated_ignored"
-msgid "Event Aggregated (Ignored)"
-msgstr "Agrégation d'événement (Ingoré)"
-
-msgctxt "model:ir.action,name:act_configuration_event_aggregate_form"
-msgid "Event Aggregate Configuration"
-msgstr "Configuration d'agrégation d'événement"
-
-msgctxt "model:ir.action,name:act_configuration_event_description_form"
-msgid "Event Aggregate Description"
-msgstr "Description d'événement agrégé"
-
-msgctxt "model:ir.ui.menu,name:menu_configuration_event_aggregate"
-msgid "Event Aggregate Configuration"
-msgstr "Configuration d'agrégation d'événement"
-
-msgctxt "selection:event.aggregate.description,unit:"
-msgid "Day(s)"
-msgstr "Jour(s)"
-
-msgctxt "selection:event.aggregate.description,unit:"
-msgid "Month(s)"
-msgstr "Mois"
 
 msgctxt "field:event.log,create_date:"
 msgid "Create Date"
@@ -162,17 +130,53 @@ msgctxt "field:ir.trigger,event_type:"
 msgid "Event Type"
 msgstr "Type d'événement"
 
+msgctxt "help:event.aggregate.description,event_type_aggregate:"
+msgid "Event Type to aggregate for [duration] [unit]"
+msgstr "Type d'événement à agréger sur une période de [durée][unité]"
+
+msgctxt "help:event.aggregate.description,event_type_notify:"
+msgid "Event Type to notify when not aggregating"
+msgstr "Type d'évènement à notifier en l'absence d'agrégation"
+
+msgctxt "model:event.aggregate.description,name:"
+msgid "Event Aggregate Description"
+msgstr "Description d'événement agrégé"
+
 msgctxt "model:event.log,name:"
 msgid "Event Log"
 msgstr "Log d'événements"
+
+msgctxt "model:event.type,name:"
+msgid "Event Aggregated (Ignored)"
+msgstr "Agrégation d'événement (Ignoré)"
+
+msgctxt "model:ir.action,name:"
+msgid "Event Aggregate Configuration"
+msgstr "Configuration d'agrégation d'événement"
+
+msgctxt "model:ir.action,name:act_configuration_event_description_form"
+msgid "Event Aggregate Description"
+msgstr "Description d'événement agrégé"
 
 msgctxt "model:ir.action,name:act_event_log_form"
 msgid "Event Logs"
 msgstr "Logs d'événements"
 
+msgctxt "model:ir.ui.menu,name:menu_configuration_event_aggregate"
+msgid "Event Aggregate Description"
+msgstr "Configuration d'agrégation d'événement"
+
 msgctxt "model:ir.ui.menu,name:menu_event_log"
 msgid "Event Logs"
 msgstr "Logs d'événements"
+
+msgctxt "selection:event.aggregate.description,unit:"
+msgid "Day(s)"
+msgstr "Jour(s)"
+
+msgctxt "selection:event.aggregate.description,unit:"
+msgid "Month(s)"
+msgstr "Mois"
 
 msgctxt "view:event.log:"
 msgid "Event Log"
