report_engine: Fix select_ids of report production request batch (#2713)
Fix: 11402

--- a/modules/report_engine/doc/en/CHANGELOG
+++ b/modules/report_engine/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11402 Optimization of the production request treatment batch's selection
 * FEA#11414 Notify the user when an asynchronous printing job is done
 * BUG#11090 Add TodayTime to the context report generation and genshi
 * OTH#00000 Properly use datetime in report engine
