--- a/modules/report_engine/doc/fr/CHANGELOG
+++ b/modules/report_engine/doc/fr/CHANGELOG
@@ -1,10 +1,11 @@
+* BUG#11402 Optimisation de la selection du batch de traitement des demandes de production de document
 * FEA#11413 Notifier l'utilisateur quand une impression en asynchrone est terminée
 * BUG#11090 Ajout de TodayTime dans le contexte de génération des rapports et de genshi
 * OTH#00000 Corriger l'utilisation de datetime pour la génération de rapports
 * BUG#10951 Prise en compte des micro secondes dans le nom par défaut des rapports générés.
 * BUG#10581 Correction d'un cas où la suppression d'une quittance ne supprime pas les demandes d'impression associées
 * BUG#10789 Correctif de crashs d'encoding lors de la génération des modèles de courrier
-* FEA#10315 Ajout de la possibilité de trier l'ordre des paramètres de règle 
+* FEA#10315 Ajout de la possibilité de trier l'ordre des paramètres de règle
 * OTH#0000 Retour de l'erreur technique si problème non directement lié au template
 
 Version 2.2 - 2018-10-12
