--- a/modules/party_cog/doc/en/CHANGELOG
+++ b/modules/party_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11353 Fix Address display
 * FEA#8622 anonymize party automatically by batch
 * FEA#10851 Add configuration at the country address lines level to limit the number of caracters
 * OTH#0000: Add data to GDPR extract
