claim_process: Handle selected claim loss desc in process finder (#2714)
Fix #11416

--- a/modules/claim_process/doc/en/CHANGELOG
+++ b/modules/claim_process/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11416 Fix proposed processes when selecting a claim into the process launcher assistant
 * BUG#10646 Fix document request on losses crash when there are no documents to initialize
 
 Version 2.2 - 2018-10-12
