report_engine_email: fix crash when printing a mail with attachment (#2717)
Fix #11224

--- a/modules/report_engine_email/doc/en/CHANGELOG
+++ b/modules/report_engine_email/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11224 Fix crash when printing a mail with attachment due to erroneous encoding since python 3
 * BUG#11087 Fix crash when printing a mail with manual editing
 * BUG#10112 Add recipient email to printing context
 
