--- a/modules/report_engine_flow/doc/en/CHANGELOG
+++ b/modules/report_engine_flow/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Fix separator decoding crash due to python 3
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 * FEA#7073 Add a message informing the user that the flow report was generated successfully
