--- a/modules/report_engine_flow/doc/fr/CHANGELOG
+++ b/modules/report_engine_flow/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Correction d'un crash lors du décodage du séparateur en raison du passage en python 3
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 * FEA#7073 Afficher un message informant l'utilisateur que la création du flux de courrier a réussi
