paryt_cog: Fix address line max length error message (#2725)
Fix #00000

--- a/modules/party_cog/doc/en/CHANGELOG
+++ b/modules/party_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Fix address line error message when checking address line maximum length
+
 Version 2.4 - 2019-04-12
 * BUG#11353 Fix Address display
 * FEA#8622 anonymize party automatically by batch
