--- a/modules/party_cog/doc/fr/CHANGELOG
+++ b/modules/party_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+OTH#00000 Correctif sur la ligne d'adresse à afficher dans le message d'erreur lors de la validation des longueurs de ligne d'adresse
+
 Version 2.4 - 2019-04-12
 * BUG#11353 Correction de l'affichage des adresses
 * FEA#8622 anonymisation des tiers par batch
