--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11454 Héritage sur CoogSQL au lieu de ModelSQL sur la classe LocalMptt
+
 Version 2.4 - 2019-04-12
 * OTH#00000 Ajout de la possibilité de surcharger la configuration des batchs avec des variables d'environnement
 * OTH#00000 Correctifs sur l'import export JSON (Python 3)
