--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#9323 Hotfix: Use initial_start_date of covered element to check overlaps
+
 Version 2.4 - 2019-04-12
 * BUG#11354 Fix crash when creating enrollment
 * BUG#11091 Add coherence check between a voided contract status and the status of its covered elements's options
