--- a/modules/account_payment_sepa_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11094 Allow to have a single snapshot for the cancel moves of all payments failed by the same CAMT054 file
+
 Version 2.4 - 2019-04-12
 * FEA#10899 Add new action on payment rejects: Present again after period
 * BUG#10186 Fix the state of the field sepa bank reject date in order to make it visible
