--- a/modules/claim_insurer/doc/en/CHANGELOG
+++ b/modules/claim_insurer/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11487 Fix claim insurer reporting get invoice line details method
+
 Version 2.4 - 2019-04-12
 * FEA#10435 add method for reporting on claim slip
 * BUG#10966 Fix claim insurer invoice slip generation chain
