--- a/modules/party_cog/doc/en/CHANGELOG
+++ b/modules/party_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11437 Fix error when wrong email is submitted
 * OTH#00000 Fix address line error message when checking address line maximum length
 
 Version 2.4 - 2019-04-12
