--- a/modules/claim_pasrau/doc/fr/CHANGELOG
+++ b/modules/claim_pasrau/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11421 Mise à jour de la grille des pasraus
+
 Version 2.4 - 2019-04-12
 * BUG#11321 Prise en compte du cas des factures ayant plusieurs lignes de taxe pasrau
 * BUG#10972 Correction d'incohérence de la déclaration Pasrau dûes aux écarts entre arrondi des sommes et somme d'arrondis
