endorsement: fix endorsement.manage_contacts calculate the contract (#2699)
* endorsement: fix endorsement.manage_contacts calculate the contract

--- a/modules/endorsement/doc/en/CHANGELOG
+++ b/modules/endorsement/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11345 Deactivate contract recalculation for manage contacts endorsement
+
 Version 2.4 - 2019-04-12
 * FEA#11065 Add field to get endorsement target object at effective date
 * BUG#11054 Fix translate data method crash
