--- a/modules/endorsement/doc/fr/CHANGELOG
+++ b/modules/endorsement/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11345 Désactivation du recalcul du contrat si on applique un avenant de type gérer les contacts
+
 Version 2.4 - 2019-04-12
 * FEA#11065 Ajout d'un champ pour obtenir l'objet visé par l'avenant en date d'effet
 * BUG#11054 Correctif du crash de la méthode de traduction des données
