account_cog: Iteration on reconciliation postponement feature (#2736)
Fix #11198

--- a/modules/account_cog/doc/fr/CHANGELOG
+++ b/modules/account_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#11198 Itération sur la fonctionnalité de report de lettrage
+
 Version 2.4 - 2019-04-12
 * FEA#11198 Ajout de la possibilité de remettre à plus tard les propositions de lettrage dans l'assistant "Lettrer les comptes"
 
