--- a/modules/account_cog/doc/en/CHANGELOG
+++ b/modules/account_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#11198 Iteration on reconciliation postponement feature
+
 Version 2.4 - 2019-04-12
 * FEA#11198 Add possibility into the account reconciliation wizard to postpone propsitions
 
