--- a/modules/claim_group/doc/fr/CHANGELOG
+++ b/modules/claim_group/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11509 Correctif sur la réactivation des contrats collectifs résiliés
+
 Version 2.4 - 2019-04-12
 * BUG#10053 Paiement des prestations à la société le dernier jour de présence
 
