--- a/modules/claim_life/doc/fr/CHANGELOG
+++ b/modules/claim_life/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11465 Les données complémentaires sur un bénéficiaire au niveau d'un sinistre ne sont pas initialisées depuis la configuration d'une prestation.
+
 Version 2.4 - 2019-04-12
 * FEA#11365 Ajout de la donnée date de début du premier évènement d'invalidité du sinistre dans le moteur de règle
 * BUG#11169 Correction des depends sur claim.loss.get_date
