--- a/modules/claim_indemnification_group/doc/en/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Open tranfer wizard as new tab instead of modal window
+
 Version 2.4 - 2019-04-12
 * FEA#11366 Add previous insurer revaluation in rule engine
 * BUG#11215 Fix translation for quarterly annuity frequency
