claim_indemnification: Fix missing check on journal (#2737)
Ref #11113

--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Fix crash when trying to validate an indemnification
+
 Version 2.4 - 2019-04-12
 * BUG#10992 Fix amounts inconsistencies on indemnification by going full Function fields
 * BUG#10785 Fix crash when doing indemnification period regularisation
