--- a/modules/claim_indemnification/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Correction d'un crash lorsqu'on essaie de valider une indemnisation
+
 Version 2.4 - 2019-04-12
 * BUG#10992 Correction des incohérences des montants d'indemnisation en recalculant tout à la volée
 * BUG#10785 Correctif d'un crash lors de la regularisation de période d'indemnisation
@@ -21,7 +23,7 @@ Version 2.2 - 2018-10-12
 * BUG#9914 Ne pas vérifier les dates de périodes précédentes à l'ordonnancement d'une annulation
 * BUG#9874 Correctif: il n'y a plus besoin de renseigner un motif d'annulation lorsqu'on souhaite annuler l'action d'annulation d'indemnisation à travers l'assistant
 * BUG#9434 Correctif: les documents requis d'un préjudice ne bloque plus l'ordonnancement d'une période d'un autre préjudice
-* BUG#9528 Autoriser l'ordennacement des indemnisations de types capitaux lors de la vérification pour ordonnancement 
+* BUG#9528 Autoriser l'ordennacement des indemnisations de types capitaux lors de la vérification pour ordonnancement
 * BUG#9407 Correctif sur les périodes pour ne plus pouvoir ordonnancer en ayant un trou entre la date de début de préjudice et la première période d'indemnisation
 * BUG#9201 Afficher les alertes de doublon de périodes d'indemnisation avant les autres alertes
 * BUG#9006 Filtre sur les indemnisations à vérifier pour le chevauchement de périodes
