--- a/modules/commission_insurance/doc/en/CHANGELOG
+++ b/modules/commission_insurance/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11276 get_void_premium: init value with Decimal
+
 Version 2.4 - 2019-04-12
 * OTH#0000 Handle case rule returns zero as an int
 * FEA#11058 Add calculation description field on commissions. This field contains a short description on how the commission has been calculated.
