claim_indemnification_group: Fix origin service check (#2753)
Fix #11529

--- a/modules/claim_indemnification_group/doc/en/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11529 Only require origin service when necessary
 * OTH#00000 Open tranfer wizard as new tab instead of modal window
 
 Version 2.4 - 2019-04-12
