--- a/modules/report_engine_flow/doc/en/CHANGELOG
+++ b/modules/report_engine_flow/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Fix encoding crash due to python 3
+
 Version 2.4 - 2019-04-12
 * OTH#0000 Fix separator decoding crash due to python 3
 
