contract_waiver_premium: Fix waiver of premium prorated amount computation (#2754)
Fix #11528

--- a/modules/contract_waiver_premium/doc/fr/CHANGELOG
+++ b/modules/contract_waiver_premium/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11528 Correctif sur les montants d'éxonérations de prime et prise en compte des taxes avec rétro-calcul
+
 Version 2.4 - 2019-04-12
 * BUG#10612 Ajout d'une vérification lorsque des exonérations se chevauchent sur une même option
 
