--- a/modules/contract_waiver_premium/doc/en/CHANGELOG
+++ b/modules/contract_waiver_premium/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11528 Fix on waiver of premium's amount computation and handle taxes with reverse compute
+
 Version 2.4 - 2019-04-12
 * BUG#10612 Add check on overlapping waivers on an option
 
