contract_insurance_invoice_dunning: add link to dunnings from contract (#2752)

--- a/modules/contract_insurance_invoice_dunning/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice_dunning/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#8010 Add link to dunnings from contract
 * BUG#11507 Change the invoice address in order to be the same of the contract subscriber
 
 Version 2.4 - 2019-04-12
