--- a/modules/account_statement_cog/doc/fr/CHANGELOG
+++ b/modules/account_statement_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11316 Correction de la disparition de la valeur du champ quittance sur une ligne de relevé si on entre la quittance puis le montant
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 * BUG#9561 Ajout des droits sur les nouveaux modèles de tryton 4.8
